调整启动参数